# calipso-convert

./: CALIPSO_download.ipynb  LICENSE  README.md  calipso_conversion_demo.ipynb  chained_conversion_demo.ipynb  environment.yml  pyproject.toml  test-hdf-to-copc-conversion.ipynb  test-hdf-to-hdf5-conversion.ipynb  test-las-to-copc-conversion.ipynb
notebooks/: CALIPSO_download.ipynb  test-hdf-to-copc-conversion.ipynb  test-hdf-to-hdf5-conversion.ipynb  test-hdf5-to-txt-conversion.ipynb  test-txt-to-las-conversion.ipynb
src/calipso_tool/: DOCUMENTATION.md  __init__.py  cli.py  converter.py  h5_to_txt.py  las_to_copc.py  txt_to_las.py
src/calipso_tool.egg-info/: PKG-INFO
src/calipso_tool/pdal_pipelines/: __init__.py  h5tolas.json
tests/: test_converter.py
