[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calipso_tool"
version = "0.1.0"
description = "CALIPSO HDF workflows: HDF4→HDF5→LAS→COPC"
authors = [{name="Kyle Lesinger", email="kdl0040@uah.edu"}]
dependencies = [
  "numpy",
  "pandas",
  "laspy",
  "h5py",
  "pdal"
]

[project.scripts]
cali-convert = "calipso_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/calipso_tool"]

[tool.hatch.build.targets.wheel.force-include]
"src/calipso_tool/bin/h4toh5convert" = "calipso_tool/bin/h4toh5convert"

